--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ menu {
 
   span {
     background: #767775;
-    color: #ffffff;
+    color: #f0eaea;
     display: inline-block;
     margin: 0.25rem;
     padding: 0.5rem;
